versioned_docs/version-3.0/admin-manual/system-tables/information_schema/statistics.md
---
{
    "title": "statistics",
    "language": "en"
}
---

<!--
Licensed to the Apache Software Foundation (ASF) under one
or more contributor license agreements.  See the NOTICE file
distributed with this work for additional information
regarding copyright ownership.  The ASF licenses this file
to you under the Apache License, Version 2.0 (the
"License"); you may not use this file except in compliance
with the License.  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing,
software distributed under the License is distributed on an
"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
KIND, either express or implied.  See the License for the
specific language governing permissions and limitations
under the License.
-->

## Overview

This table is solely for compatibility with MySQL behavior. It is always empty.

## Database


`information_schema`


## Table Information

| Column Name   | Type          | Description |
| ------------- | ------------- | ----------- |
| TABLE_CATALOG | varchar(512)  |             |
| TABLE_SCHEMA  | varchar(64)   |             |
| TABLE_NAME    | varchar(64)   |             |
| NON_UNIQUE    | bigint        |             |
| INDEX_SCHEMA  | varchar(64)   |             |
| INDEX_NAME    | varchar(64)   |             |
| SEQ_IN_INDEX  | bigint        |             |
| COLUMN_NAME   | varchar(64)   |             |
| COLLATION     | varchar(1)    |             |
| CARDINALITY   | bigint        |             |
| SUB_PART      | bigint        |             |
| PACKED        | varchar(10)   |             |
| NULLABLE      | varchar(3)    |             |
| INDEX_TYPE    | varchar(16)   |             |
| COMMENT       | varchar(16)   |             |
| INDEX_COMMENT | varchar(1024) |             |